# CTemplate

./: CMakeLists.txt
include/: template_api.h
src/: main.cpp
src/adapter/: DisplayAdapter.cpp  DisplayAdapter.h
ut/: CMakeLists.txt
ut/src/: tc_main.cpp
